--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "",
+  "name": "symbolist",
   "private": true,
   "prettier": "@marcbouchenoire/prettier-config",
   "nano-staged": {
     "*.{json,md,yml}": [
-      "yarn prettier"
+      "pnpm prettier"
     ],
     "packages/symbolist/**/*.mjs": [
-      "yarn workspace symbolist eslint --fix",
-      "yarn workspace symbolist prettier"
+      "pnpm --filter symbolist eslint --fix",
+      "pnpm --filter symbolist prettier"
     ],
     "packages/symbolist/**/*.{ts,tsx}": [
-      "yarn workspace symbolist eslint --fix",
-      "yarn workspace symbolist tsatsiki --project tsconfig.json declarations.d.ts",
-      "yarn workspace symbolist prettier"
+      "pnpm --filter symbolist eslint --fix",
+      "pnpm --filter symbolist tsatsiki --project tsconfig.json declarations.d.ts",
+      "pnpm --filter symbolist prettier"
     ],
     "packages/symbolist/**/*.{json,md}": [
-      "yarn workspace symbolist prettier"
+      "pnpm --filter symbolist prettier"
     ],
     "packages/site/**/*.{cjs,mjs}": [
-      "yarn workspace site eslint --fix",
-      "yarn workspace site prettier"
+      "pnpm --filter site eslint --fix",
+      "pnpm --filter site prettier"
     ],
     "packages/site/**/*.{ts,tsx}": [
-      "yarn workspace site eslint --fix",
-      "yarn workspace site tsatsiki --project tsconfig.json next-env.d.ts declarations.d.ts",
-      "yarn workspace site prettier"
+      "pnpm --filter site eslint --fix",
+      "pnpm --filter site tsatsiki --project tsconfig.json next-env.d.ts declarations.d.ts",
+      "pnpm --filter site prettier"
     ],
     "packages/site/**/*.css": [
-      "yarn workspace site stylelint --fix",
-      "yarn workspace site prettier"
+      "pnpm --filter site stylelint --fix",
+      "pnpm --filter site prettier"
     ],
     "packages/site/**/*.{json,md}": [
-      "yarn workspace site prettier"
+      "pnpm --filter site prettier"
     ]
   },
   "husky": {
@@ -47,19 +47,21 @@
     "packages/*"
   ],
   "scripts": {
-    "site:dev": "yarn workspace site dev",
-    "site:build": "yarn workspace site build",
-    "site:publish": "yarn build && yarn site:build",
+    "site:dev": "pnpm --filter site dev",
+    "site:build": "pnpm --filter site build",
+    "site:publish": "pnpm build && pnpm site:build",
     "prettier": "prettier --write --loglevel silent --ignore-path .gitignore",
-    "generate": "yarn workspace symbolist generate",
-    "build": "yarn workspace symbolist build",
-    "test": "yarn workspace symbolist test",
-    "test:coverage": "yarn workspace symbolist test:coverage",
-    "lint": "yarn prettier '*.{json,md,yml}' && lerna run lint --stream",
-    "release": "yarn test && lerna publish",
-    "postinstall": "yarn workspace site postinstall"
+    "generate": "pnpm --filter symbolist generate",
+    "build": "pnpm --filter symbolist build",
+    "test": "pnpm --filter symbolist test",
+    "test:coverage": "pnpm --filter symbolist test:coverage",
+    "lint": "pnpm prettier '*.{json,md,yml}' && pnpm --recursive --parallel --if-present lint",
+    "change": "pnpm changeset",
+    "bump": "pnpm changeset version && pnpm install",
+    "release": "pnpm test && pnpm publish -r"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@marcbouchenoire/eslint-config": "^2.8.1",
     "@marcbouchenoire/prettier-config": "^1.1.0",
     "@types/node": "^18.11.18",
