--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "test:coverage": "pnpm --filter symbolist test:coverage",
     "lint": "pnpm prettier '*.{json,md,yml}' && pnpm --recursive --parallel --if-present lint",
     "change": "pnpm changeset",
-    "bump": "pnpm changeset version && pnpm install",
-    "release": "pnpm test && pnpm publish -r"
+    "version": "pnpm changeset version && pnpm install --no-frozen-lockfile",
+    "release": "pnpm build && pnpm test && pnpm publish --recursive"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
