--- a/package.json
+++ b/package.json
@@ -44,18 +44,15 @@
     "node": "^14.13.1 || >=16.0.0"
   },
   "scripts": {
-    "site:dev": "pnpm --filter site dev",
-    "site:build": "pnpm --filter site build",
-    "site:publish": "pnpm build && pnpm site:build",
     "prettier": "prettier --write --loglevel silent --ignore-path .gitignore",
-    "generate": "pnpm --filter symbolist generate",
-    "build": "pnpm --filter symbolist build",
-    "test": "pnpm --filter symbolist test",
-    "test:coverage": "pnpm --filter symbolist test:coverage",
-    "lint": "pnpm prettier '*.{json,md,yml}' && pnpm --recursive --parallel --if-present lint",
+    "generate": "turbo generate",
+    "build": "turbo build",
+    "test": "turbo test",
+    "test:coverage": "turbo test:coverage",
+    "lint": "pnpm prettier '*.{json,md,yml}' && turbo lint",
     "change": "pnpm changeset",
     "version": "pnpm changeset version && pnpm install --no-frozen-lockfile",
-    "release": "pnpm build && pnpm changeset publish"
+    "release": "turbo build --filter=symbolist && pnpm changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
@@ -69,6 +66,7 @@
     "prettier": "^2.8.2",
     "tsatsiki": "^2.0.1",
     "tsm": "^2.3.0",
+    "turbo": "^1.7.4",
     "typescript": "^4.9.4"
   }
 }
