--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -41,7 +41,8 @@
     "generate": "tsm scripts/generate.ts && pnpm prettier 'src/data/*.{ts,json}'",
     "prepublishOnly": "pnpm build",
     "test": "uvu --require tsm tests",
-    "test:coverage": "nyc --temp-dir=.nyc.log --include=src pnpm test && nyc report --temp-dir=.nyc.log --reporter=lcov"
+    "test:coverage": "nyc --temp-dir=.nyc.log --include=src pnpm test && nyc report --temp-dir=.nyc.log --reporter=lcov",
+    "release": "pnpm login && np"
   },
   "devDependencies": {
     "@types/listr": "^0.14.4",
