--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -31,6 +31,7 @@
     "./package.json": "./package.json"
   },
   "types": "./dist/index.d.ts",
+  "packageManager": "pnpm@9.5.0",
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
     "prettier": "prettier --write --loglevel silent --ignore-path .eslintignore",
