--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "symbolist",
-  "version": "5.1.0",
+  "version": "6.0.0-beta1",
   "description": "A collection of every symbol from SF Symbols.",
   "author": "Marc Bouchenoire",
   "license": "MIT",
